[package]
name = "websocket"
version = "1.0.0"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
iced = { version = "0.7.0", features = ["tokio", "debug"] }
iced_native = { version = "0.8.0" }
iced_futures = { version = "0.5.1" }
once_cell = "1.15"
lazy_static = "1.4.0"
chrono = "0.4.19"

[dependencies.async-tungstenite]
version = "0.16"
features = ["tokio-rustls-webpki-roots"]

[dependencies.tokio]
version = "1"
features = ["time"]

[dependencies.warp]
version = "0.3"
